crates/flowdiff-core/tests/snapshots/snapshot_tests__multi_entrypoint.snap
---
source: crates/flowdiff-core/tests/snapshot_tests.rs
expression: v
---
{
  "annotations": null,
  "diff_source": {
    "base": "main",
    "base_sha": "[sha]",
    "diff_type": "BranchComparison",
    "head": "feature/multi",
    "head_sha": "[sha]"
  },
  "groups": [
    {
      "edges": [
        {
          "edge_type": "Imports",
          "from": "src/routes/orders.ts",
          "to": "src/services/orderService.ts::processOrder"
        },
        {
          "edge_type": "Calls",
          "from": "src/routes/orders.ts::createOrder",
          "to": "src/services/orderService.ts::processOrder"
        },
        {
          "edge_type": "Imports",
          "from": "src/services/orderService.ts",
          "to": "src/repositories/orderRepo.ts::saveOrder"
        },
        {
          "edge_type": "Imports",
          "from": "src/services/orderService.ts",
          "to": "src/utils/notify.ts::sendNotification"
        },
        {
          "edge_type": "Calls",
          "from": "src/services/orderService.ts::processOrder",
          "to": "src/repositories/orderRepo.ts::saveOrder"
        },
        {
          "edge_type": "Calls",
          "from": "src/services/orderService.ts::processOrder",
          "to": "src/utils/notify.ts::sendNotification"
        }
      ],
      "entrypoint": {
        "entrypoint_type": "HttpRoute",
        "file": "src/routes/orders.ts",
        "symbol": "createOrder"
      },
      "files": [
        {
          "changes": {
            "additions": 0,
            "deletions": 0
          },
          "flow_position": 0,
          "path": "src/routes/orders.ts",
          "role": "Entrypoint",
          "symbols_changed": []
        },
        {
          "changes": {
            "additions": 0,
            "deletions": 0
          },
          "flow_position": 1,
          "path": "src/services/orderService.ts",
          "role": "Service",
          "symbols_changed": []
        },
        {
          "changes": {
            "additions": 0,
            "deletions": 0
          },
          "flow_position": 2,
          "path": "src/repositories/orderRepo.ts",
          "role": "Repository",
          "symbols_changed": []
        },
        {
          "changes": {
            "additions": 0,
            "deletions": 0
          },
          "flow_position": 3,
          "path": "src/utils/notify.ts",
          "role": "Utility",
          "symbols_changed": []
        }
      ],
      "id": "group_1",
      "name": "createOrder route flow",
      "review_order": 1,
      "risk_score": 0.3125
    }
  ],
  "infrastructure_group": {
    "files": [
      "src/workers/orderWorker.ts"
    ],
    "reason": "Not reachable from any detected entrypoint",
    "sub_groups": [
      {
        "category": "Unclassified",
        "files": [
          "src/workers/orderWorker.ts"
        ],
        "name": "Unclassified"
      }
    ]
  },
  "summary": {
    "frameworks_detected": [
      "Express"
    ],
    "languages_detected": [
      "typescript"
    ],
    "total_files_changed": 5,
    "total_groups": 1
  },
  "version": "1.0.0"
}
